# kill-pr0cess.inc

./: .env.example  .gitignore  README.md  compose.yml  dev.compose.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  repomix-output.xml  sanitize.sh
.github/workflows/: cd.yml  ci.yml  performance-tests.yml
backend/: .Cargo.toml.kate-swp  Cargo.toml  Dockerfile.dev  Dockerfile.prod  build.rs  config.lua  repomix-output.xml  shell.nix
backend/.sqlx/: query-0b8c3e6514c84098ba06ebc6b6723e367150b660721c2d362d3b343ffbce91c6.json  query-189b19f7f236e682add9b4dd085ca5477d9301260ed8c1306764459b84d80383.json  query-5e1c3a8301ddf66123e5ce7a75e5f5e85fc9e72be986e54f6445d19c05fb20f5.json  query-6462a25a5c66a5ebeaa749a75f09953d4075e071b4020f13a5efcba0a311613e.json  query-868cdb8650cd21986096a0184c821c28f94899a65d6d55c73c774a3dacb61097.json  query-8e64ae7e3622f160dd38992af871fcc242cf8316dd8d437eccbb252fa6c5483f.json  query-90c046c5d643ad270ec55eef6da92d50385420674777b595c64415842499dd71.json  query-98a4ca6f7f1ba22481c05a48f73ee0a2d92d1408a0cb7eff09babf8e6be38cc8.json  query-a4280467c60d7d9a5d7b735093f27feef5a5b0ed7411d7ce4ef3972970808d1a.json  query-ace7f541e4b3186704c6f64529dbd0eab725113dbda4523a433cea511cdd91e3.json  query-b734651e1ea5b9d9c7d73fb2a30bda161de428d38e66d32705a4af01af42b6f1.json  query-cf865d50e95a8a894e4bd9456ed716c4091fca40768f1d82c5e09de0d4f66e3e.json  query-fe96ba60c35feb4efa62571c4494d64b8fa353d184965098a6619e50dd299288.json
backend/database/migrations/: 001_initial.sql
backend/src/: .lib.rs.kate-swp  lib.rs  main.rs
backend/src/database/: connection.rs  mod.rs
backend/src/database/migrations/: 001_initial.sql  002_fix_nullables.sql
backend/src/models/: fractals.rs  github.rs  mod.rs  performance.rs
backend/src/routes/: docs.rs  fractals.rs  github.rs  health.rs  mod.rs  performance.rs
backend/src/services/: cache_service.rs  fractal_service.rs  github_service.rs  mod.rs  performance_service.rs
backend/src/utils/: config.rs  error.rs  metrics.rs  mod.rs
docs/: LICENSE
frontend/: Dockerfile.dev  Dockerfile.prod  app.config.ts  eslint.config.js  package-lock.json  package.json  postcss.config.js  repomix-output.xml  solidtest.sh  tailwind.config.js  tsconfig.json  vite-plugin-solid-patch.js
frontend/public/: manifest.json
frontend/src/: App.tsx  app.css  app.tsx  entry-client.tsx  entry-server.tsx  global.d.ts  index.tsx  routes.tsx
frontend/src/components/: Counter.tsx  Nav.tsx
frontend/src/components/Fractals/: FractalCanvas.tsx  FractalControls.tsx  FractalInfo.tsx
frontend/src/components/GitHub/: ProjectCard.tsx  ProjectDetail.tsx  ProjectFilters.tsx  ProjectGrid.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/Performance/: BenchmarkChart.tsx  MetricsDisplay.tsx  RustMetrics.tsx  SystemMonitor.tsx  TechStackInfo.tsx  WebVitals.tsx
frontend/src/components/UI/: Button.tsx  Card.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useFractals.ts  useGitHub.ts  usePerformance.ts  useWebVitals.ts
frontend/src/pages/: About.tsx  Home.tsx  Performance.tsx  Projects.tsx
frontend/src/routes/: [...404].tsx  _layout.tsx  about.tsx  index.tsx  performance.tsx  performance.tsx   projects.tsx  projects.tsx 
frontend/src/routes/api/: health.ts
frontend/src/services/: api.ts  fractals.ts  github.ts  performance.ts
frontend/src/styles/: components.css  global.css
frontend/src/utils/: animations.ts  canvas.ts  performance.ts  theme.ts
monitoring/: prometheus.prod.yml  prometheus.yml
monitoring/grafana/dashboards/: performance.json
nginx/: nginx.conf
nginx/sites-enabled/: default.conf
scripts/: benchmark.sh  clean.pl  debug.sh  deploy.sh  julia-fractal-math.jl  linterExp.cr  setup.sh
