[package]
name = "dark-performance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Fractal computation
num-complex = "0.4"
rayon = "1.8"

# Performance monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Memory management
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
